Sync HTML to use einstein.mp4 video

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         }
 
         .pricing-card.featured::before {
-            content: 'Mas Popular';
+            content: 'Más Popular';
             position: absolute;
             top: 1rem;
             right: 1rem;
@@ -452,7 +452,7 @@
         }
 
         .pricing-features li::before {
-            content: '\2713';
+            content: '✓';
             color: var(--primary);
             font-weight: 700;
         }
@@ -566,7 +566,7 @@
             </a>
             <div class="nav-links">
                 <a href="#features">Funciones</a>
-                <a href="#how-it-works">Como Funciona</a>
+                <a href="#how-it-works">Cómo Funciona</a>
                 <a href="#pricing">Precios</a>
                 <a href="#contact" class="btn btn-primary">Empezar Gratis</a>
             </div>
@@ -580,7 +580,7 @@
             <div class="hero-text fade-in">
                 <div class="badge">EN VIVO 24/7</div>
                 <h1>Tu Asistente <span>Einstein</span> para Negocios</h1>
-                <p>Albert responde llamadas, agenda citas, envia recordatorios por WhatsApp y Gmail. Optimiza tu tiempo y espacio como lo haria Einstein.</p>
+                <p>Albert responde llamadas, agenda citas, envía recordatorios por WhatsApp y Gmail. Optimiza tu tiempo y espacio como lo haría Einstein.</p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">
                         Probar Albert Gratis
@@ -602,43 +602,43 @@
     <section class="features" id="features">
         <div class="section-header fade-in">
             <h2>Todo lo que Albert Hace por Ti</h2>
-            <p>Un asistente completo que trabaja 24/7 para que tu te enfoques en lo importante</p>
+            <p>Un asistente completo que trabaja 24/7 para que tú te enfoques en lo importante</p>
         </div>
         <div class="features-grid">
             <div class="feature-card fade-in delay-1">
                 <div class="feature-icon">📞</div>
                 <h3>Responde Llamadas 24/7</h3>
-                <p>Albert contesta todas las llamadas de tu negocio automaticamente. Nunca pierdas un cliente potencial, ni de dia ni de noche.</p>
+                <p>Albert contesta todas las llamadas de tu negocio automáticamente. Nunca pierdas un cliente potencial, ni de día ni de noche.</p>
                 <span class="feature-tag">Activo</span>
             </div>
             <div class="feature-card fade-in delay-2">
                 <div class="feature-icon">📅</div>
                 <h3>Agenda Citas Inteligente</h3>
-                <p>Verifica disponibilidad en tiempo real, evita conflictos y agenda citas automaticamente. Convierte llamadas en dinero.</p>
+                <p>Verifica disponibilidad en tiempo real, evita conflictos y agenda citas automáticamente. Convierte llamadas en dinero.</p>
                 <span class="feature-tag">Activo</span>
             </div>
             <div class="feature-card fade-in delay-3">
                 <div class="feature-icon">💬</div>
-                <h3>WhatsApp Automatico</h3>
-                <p>Responde mensajes de WhatsApp, envia confirmaciones, recordatorios y actualizaciones sin que tengas que hacer nada.</p>
+                <h3>WhatsApp Automático</h3>
+                <p>Responde mensajes de WhatsApp, envía confirmaciones, recordatorios y actualizaciones sin que tengas que hacer nada.</p>
                 <span class="feature-tag">Activo</span>
             </div>
             <div class="feature-card fade-in delay-1">
                 <div class="feature-icon">📧</div>
                 <h3>Gmail Inteligente</h3>
-                <p>Lee y responde emails de clientes automaticamente. Gestiona consultas, confirmaciones y seguimientos por ti.</p>
+                <p>Lee y responde emails de clientes automáticamente. Gestiona consultas, confirmaciones y seguimientos por ti.</p>
                 <span class="feature-tag">Activo</span>
             </div>
             <div class="feature-card fade-in delay-2">
                 <div class="feature-icon">⏰</div>
                 <h3>Recordatorios SMS</h3>
-                <p>Envia recordatorios 24h y 1h antes de cada cita. Reduce no-shows del 30% al 5%.</p>
+                <p>Envía recordatorios 24h y 1h antes de cada cita. Reduce no-shows del 30% al 5%.</p>
                 <span class="feature-tag">Activo</span>
             </div>
             <div class="feature-card fade-in delay-3">
                 <div class="feature-icon">⭐</div>
-                <h3>Pide Resenas</h3>
-                <p>Despues de cada servicio, Albert solicita resenas en Google y Yelp automaticamente. Construye tu reputacion sin esfuerzo.</p>
+                <h3>Pide Reseñas</h3>
+                <p>Después de cada servicio, Albert solicita reseñas en Google y Yelp automáticamente. Construye tu reputación sin esfuerzo.</p>
                 <span class="feature-tag">Activo</span>
             </div>
         </div>
@@ -647,8 +647,8 @@
     <!-- How It Works -->
     <section class="how-it-works" id="how-it-works">
         <div class="section-header fade-in">
-            <h2>Como Funciona Albert</h2>
-            <p>En 3 simples pasos, Albert estara trabajando para ti</p>
+            <h2>Cómo Funciona Albert</h2>
+            <p>En 3 simples pasos, Albert estará trabajando para ti</p>
         </div>
         <div class="steps">
             <div class="step fade-in delay-1">
@@ -662,14 +662,14 @@
                 <div class="step-number">2</div>
                 <div class="step-content">
                     <h3>Conecta tus Canales</h3>
-                    <p>Vincula tu numero de telefono, WhatsApp y Gmail. Albert comenzara a responder automaticamente.</p>
+                    <p>Vincula tu número de teléfono, WhatsApp y Gmail. Albert comenzará a responder automáticamente.</p>
                 </div>
             </div>
             <div class="step fade-in delay-3">
                 <div class="step-number">3</div>
                 <div class="step-content">
                     <h3>Albert Trabaja 24/7</h3>
-                    <p>Mientras tu haces el trabajo de campo, Albert maneja todas las comunicaciones, agendas y recordatorios.</p>
+                    <p>Mientras tú haces el trabajo de campo, Albert maneja todas las comunicaciones, agendas y recordatorios.</p>
                 </div>
             </div>
         </div>
@@ -679,19 +679,19 @@
     <section class="pricing" id="pricing">
         <div class="section-header fade-in">
             <h2>Planes Simples, ROI Garantizado</h2>
-            <p>Las PYMEs pierden $6,000/ano en llamadas perdidas. Albert te devuelve ese dinero.</p>
+            <p>Las PYMEs pierden $6,000/año en llamadas perdidas. Albert te devuelve ese dinero.</p>
         </div>
         <div class="pricing-grid">
             <div class="pricing-card fade-in delay-1">
                 <h3>Starter</h3>
-                <p style="color: var(--text-gray);">Para negocios pequenos</p>
+                <p style="color: var(--text-gray);">Para negocios pequeños</p>
                 <div class="price">$299<span>/mes</span></div>
                 <ul class="pricing-features">
                     <li>500 minutos de llamadas</li>
                     <li>1,000 SMS</li>
-                    <li>2 tecnicos/crews</li>
+                    <li>2 técnicos/crews</li>
                     <li>WhatsApp ilimitado</li>
-                    <li>Gmail automatico</li>
+                    <li>Gmail automático</li>
                     <li>Recordatorios SMS</li>
                     <li>Soporte por email</li>
                 </ul>
@@ -699,15 +699,15 @@
             </div>
             <div class="pricing-card featured fade-in delay-2">
                 <h3>Professional</h3>
-                <p style="color: var(--text-gray);">El mas popular</p>
+                <p style="color: var(--text-gray);">El más popular</p>
                 <div class="price">$499<span>/mes</span></div>
                 <ul class="pricing-features">
                     <li>1,500 minutos de llamadas</li>
                     <li>3,000 SMS</li>
-                    <li>5 tecnicos/crews</li>
+                    <li>5 técnicos/crews</li>
                     <li>WhatsApp ilimitado</li>
-                    <li>Gmail automatico</li>
-                    <li>Pedir resenas automatico</li>
+                    <li>Gmail automático</li>
+                    <li>Pedir reseñas automático</li>
                     <li>Analytics avanzado</li>
                     <li>Soporte prioritario</li>
                 </ul>
@@ -720,10 +720,10 @@
                 <ul class="pricing-features">
                     <li>3,000 minutos de llamadas</li>
                     <li>6,000 SMS</li>
-                    <li>Tecnicos ilimitados</li>
-                    <li>WhatsApp multi-linea</li>
+                    <li>Técnicos ilimitados</li>
+                    <li>WhatsApp multi-línea</li>
                     <li>Gmail multi-cuenta</li>
-                    <li>Optimizacion de rutas</li>
+                    <li>Optimización de rutas</li>
                     <li>API personalizada</li>
                     <li>Gerente de cuenta dedicado</li>
                 </ul>
@@ -736,8 +736,8 @@
     <section class="cta" id="contact">
         <div class="cta-bg"></div>
         <div class="cta-content fade-in">
-            <h2>Listo para que Albert Trabaje para Ti?</h2>
-            <p>Unete a cientos de PYMEs que ya optimizan su tiempo con Albert. Prueba gratis por 14 dias.</p>
+            <h2>¿Listo para que Albert Trabaje para Ti?</h2>
+            <p>Únete a cientos de PYMEs que ya optimizan su tiempo con Albert. Prueba gratis por 14 días.</p>
             <a href="mailto:hello@albert.ai" class="btn btn-primary">
                 Comenzar Prueba Gratis
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
@@ -747,7 +747,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p class="footer-quote">"La creatividad es la inteligencia divirtiendose." - Albert Einstein</p>
+        <p class="footer-quote">"La creatividad es la inteligencia divirtiéndose." - Albert Einstein</p>
         <p>© 2025 Albert AI. Todos los derechos reservados.</p>
     </footer>
 
